fix playlsit controls overlap on text-based skins too
Bug: 4908
git-svn-id: file:///home/awy/mirror/slim/trunk/server@11917 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/EN/slimserver.css
+++ b/HTML/EN/slimserver.css
@@ -84,9 +84,7 @@ div#browsedbList {
 }
 
 .playlistControls {
-	position: absolute;
-	top: 0px;
-	right: 0px;
+	text-align:right;
 }
 
 .browsedbControls {
